change all hbs, add mathjax

--- a/themes/ghostium/default.hbs
+++ b/themes/ghostium/default.hbs
@@ -35,7 +35,9 @@
     <link rel="stylesheet" href="{{asset 'css/custom.css'}}"/>
     <link rel="stylesheet" href="{{asset 'css/asciidoctor-foundation.css'}}"/>
 
-
+    <script type="text/javascript" async
+      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
 
 
     <script type="text/javascript">
