--- a/themes/uno-zen/default.hbs
+++ b/themes/uno-zen/default.hbs
@@ -4,6 +4,11 @@
     <title>{{meta_title}}</title>
     {{> meta}}
     <link rel="stylesheet" type="text/css" href="{{asset "css/uno-zen.css"}}" />
+	
+    <script type="text/javascript" async
+      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
+	
     {{ghost_head}}
   </head>
   <body class="{{body_class}}">
