--- a/themes/uno/default.hbs
+++ b/themes/uno/default.hbs
@@ -29,6 +29,10 @@
     {{! Styles and Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/uno.css"}}" />
 
+    <script type="text/javascript" async
+      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
+	
     {{! Ghost Magic }}
     {{ghost_head}}
 
