--- a/themes/roon/default.hbs
+++ b/themes/roon/default.hbs
@@ -18,6 +18,10 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic|Open+Sans:400italic,700italic,700,400">
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
 
+    <script type="text/javascript" async
+      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
+	
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
 </head>
