--- a/themes/saga/default.hbs
+++ b/themes/saga/default.hbs
@@ -14,6 +14,11 @@
     <link href="{{asset 'css/style.css'}}" rel="stylesheet" type="text/css">
     <link href="{{asset 'css/animate.min.css'}}" rel="stylesheet" type="text/css">
     <link href="{{asset 'favicon.ico'}}" rel="shortcut icon">
+	
+    <script type="text/javascript" async
+      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
+	
     {{ghost_head}}
 </head>
 <body class="{{body_class}}">
