--- a/themes/uno/assets/css/uno.css
+++ b/themes/uno/assets/css/uno.css
@@ -1,4 +1,4 @@
-@import 'http://fonts.googleapis.com/css?family=Raleway:400,700|Roboto+Slab:300,400)';
+@import "http://fonts.googleapis.com/css?family=Raleway:400,700|Roboto+Slab:300,400)";
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -937,7 +937,7 @@ body {
 
 a {
   text-decoration: none;
-  color: #e25440; }
+  color: #E25440; }
   a:hover {
     color: #b9301c;
     -o-transition: .5s;
@@ -992,8 +992,8 @@ em {
 blockquote {
   margin: 1em 0;
   padding: 2em 0;
-  background: #f8f8f8;
-  border: 1px solid #eeeeee;
+  background: #F8F8F8;
+  border: 1px solid #EEEEEE;
   border-radius: 3px;
   font-family: "Roboto Slab", serif;
   font-weight: lighter;
@@ -1085,7 +1085,7 @@ pre {
   position: relative;
   display: inline-block;
   padding: 8px 18px 9px 18px;
-  background: #e25440;
+  background: #E25440;
   border-radius: 3px;
   text-align: center;
   color: #FFF; }
@@ -1109,7 +1109,7 @@ pre {
 .footer {
   display: block;
   padding: 2em 0 0 0;
-  border-top: 2px solid #dddddd;
+  border-top: 2px solid #DDDDDD;
   font-size: .7em;
   color: #b3b3b3; }
 
@@ -1134,13 +1134,13 @@ hr {
 .section-title__divider {
   width: 30%;
   margin: 2.2em 0 2.1em 0;
-  border-top: 1px solid #dddddd; }
+  border-top: 1px solid #DDDDDD; }
 
 .hidden {
   display: none !important; }
 
 .post-comments {
-  border-top: 1px solid #dddddd;
+  border-top: 1px solid #DDDDDD;
   padding: 60px 0; }
 
 .post-meta {
@@ -1170,15 +1170,15 @@ hr {
   border-radius: 3px;
   text-align: center; }
 .post pre {
-  width: 95%; overflow-x: auto;}
+  width: 95%;
+  overflow-x: auto; }
+.post .ulist {
+  overflow-x: auto; }
 .post hr {
   display: block;
   width: 30%;
   margin: 2em 0;
-  border-top: 1px solid #dddddd; }
-.post .ulist {
-  overflow-x: auto;
-}
+  border-top: 1px solid #DDDDDD; }
 
 .error-code {
   font-size: 6em; }
@@ -1203,7 +1203,7 @@ hr {
   font-size: 1.2em;
   font-weight: lighter;
   letter-spacing: 3px;
-  color: #cccccc;
+  color: #CCCCCC;
   -webkit-font-smoothing: antialiased; }
 
 .panel-cover {
@@ -1217,8 +1217,8 @@ hr {
   background-size: cover; }
 
 .panel-cover--collapsed {
-  width: 40%;
-  max-width: 530px; }
+  width: 25%;
+  max-width: 330px; }
 
 .panel-cover--overlay {
   display: block;
@@ -1252,8 +1252,8 @@ hr {
   height: 100%; }
 
 .no-js .panel-main {
-  width: 40%;
-  max-width: 530px; }
+  width: 25%;
+  max-width: 330px; }
 
 .panel-main__inner {
   display: table-cell;
@@ -1263,11 +1263,11 @@ hr {
   padding: 0 60px; }
 
 .panel-main__content {
-  max-width: 620px;
+  max-width: 820px;
   margin: 0 auto; }
 
 .panel-main__content--fixed {
-  width: 480px;
+  width: 680px;
   transition: width 1s;
   -webkit-transition: width 1s;
   /* Safari */ }
@@ -1311,21 +1311,21 @@ hr {
 
 .btn, .navigation__item a {
   padding: 10px 20px;
-  border: 1px solid #e25440;
+  border: 1px solid #E25440;
   border-radius: 20px;
   font-size: .9em;
   font-weight: bold;
   letter-spacing: 1px;
   text-shadow: none;
-  color: #e25440;
+  color: #E25440;
   -webkit-font-smoothing: antialiased; }
   .btn:hover, .navigation__item a:hover {
     color: #b9301c;
     border-color: #b9301c; }
 
 .btn-secondary {
-  border-color: #5ba4e5;
-  color: #5ba4e5; }
+  border-color: #5BA4E5;
+  color: #5BA4E5; }
   .btn-secondary:hover {
     color: #217fd2;
     border-color: #217fd2; }
@@ -1464,7 +1464,7 @@ i {
 .post-list__divider {
   width: 30%;
   margin: 2.2em 0 2.1em 0;
-  border-top: 1px solid #dddddd; }
+  border-top: 1px solid #DDDDDD; }
 
 *:focus {
   outline: none; }
@@ -1485,7 +1485,7 @@ input[type="tel"] {
   width: 240px;
   padding: 1em 1em;
   background: #FFF;
-  border: 1px solid #dddddd;
+  border: 1px solid #DDDDDD;
   border-radius: 3px;
   font-size: .9em;
   color: #666666; }
@@ -1502,7 +1502,7 @@ input[type="tel"] {
   input[type="url"]:focus,
   input[type="search"]:focus,
   input[type="tel"]:focus {
-    border-color: #5ba4e5; }
+    border-color: #5BA4E5; }
   input[type="text"]::-webkit-input-placeholder,
   input[type="password"]::-webkit-input-placeholder,
   input[type="datetime"]::-webkit-input-placeholder,
@@ -1516,7 +1516,7 @@ input[type="tel"] {
   input[type="url"]::-webkit-input-placeholder,
   input[type="search"]::-webkit-input-placeholder,
   input[type="tel"]::-webkit-input-placeholder {
-    color: #cccccc; }
+    color: #CCCCCC; }
   input[type="text"]::-moz-placeholder,
   input[type="password"]::-moz-placeholder,
   input[type="datetime"]::-moz-placeholder,
@@ -1530,7 +1530,7 @@ input[type="tel"] {
   input[type="url"]::-moz-placeholder,
   input[type="search"]::-moz-placeholder,
   input[type="tel"]::-moz-placeholder {
-    color: #cccccc; }
+    color: #CCCCCC; }
   input[type="text"]:-moz-placeholder,
   input[type="password"]:-moz-placeholder,
   input[type="datetime"]:-moz-placeholder,
@@ -1544,7 +1544,7 @@ input[type="tel"] {
   input[type="url"]:-moz-placeholder,
   input[type="search"]:-moz-placeholder,
   input[type="tel"]:-moz-placeholder {
-    color: #cccccc; }
+    color: #CCCCCC; }
   input[type="text"]:-ms-input-placeholder,
   input[type="password"]:-ms-input-placeholder,
   input[type="datetime"]:-ms-input-placeholder,
@@ -1558,7 +1558,7 @@ input[type="tel"] {
   input[type="url"]:-ms-input-placeholder,
   input[type="search"]:-ms-input-placeholder,
   input[type="tel"]:-ms-input-placeholder {
-    color: #cccccc; }
+    color: #CCCCCC; }
 
 @media all and (min-width: 1300px) {
   .content-wrapper {
@@ -1683,3 +1683,5 @@ input[type="tel"] {
   .btn, .navigation__item a {
     display: block;
     margin-bottom: .4em; } }
+
+/*# sourceMappingURL=uno.css.map */
