--- a/themes/uno/post.hbs
+++ b/themes/uno/post.hbs
@@ -17,39 +17,44 @@
     </section>
 	
 	<footer class="post-footer">
-		<div itemprop="author" itemscope itemtype="http://schema.org/Person" class="post-author">
-		  {{#if author.image}}
-			<a href="{{author.website}}" class="post-author-avatar">
-			  <img itemprop="image" src="{{author.image}}" alt="{{author.name}}">
-			</a>
-		  {{/if}}
-		  <div class="post-author-info">
-			<h4 class="post-footer-heading">Written By</h4>
-			<a href="{{author.website}}" itemprop="url" class="post-author-name">
-			  <span itemprop="name">{{author.name}}</span>
-			</a>
-			<p itemprop="description" class="post-author-bio">{{author.bio}}</p>
-			{{#if author.location}}
-			  <p class="post-author-location">{{author.location}}</p>
-			{{/if}}
-			{{#if author.website}}
-			  <p class="post-author-website">
-				<a href="{{author.website}}" rel="nofollow">{{author.website}}</a>
-			  </p>
-			{{/if}}
-			<p class="post-info">
-			  <b class="post-info-title">Published on</b>
-			  <time class="post-date">{{date format='MMMM DD, YYYY'}}</time>
-			</p>
-		  </div>
-		</div>
-		<div class="post-social">
-		  <h4 class="post-footer-heading">Spread the word</h4>
-		  <a href="#" data-action="share-twitter"><i class="fa fa-fw fa-lg fa-twitter"></i></a>
-		  <a href="#" data-action="share-facebook"><i class="fa fa-fw fa-lg fa-facebook"></i></a>
-		  <a href="#" data-action="share-gplus"><i class="fa fa-fw fa-lg fa-google-plus"></i></a>
-		</div>
-	</footer>
+
+        {{! Everything inside the #author tags pulls data from the author }}
+        {{#author}}
+
+            {{#if image}}
+            <figure class="author-image">
+                <a class="img" href="{{url}}" style="background-image: url({{image}})"><span class="hidden">{{name}}'s Picture</span></a>
+            </figure>
+            {{/if}}
+
+            <section class="author">
+                <h5>WRITTEN BY</h5>
+                <h4>{{name}}</h4>
+
+                {{#if bio}}
+                    <p>{{bio}}</p>
+                {{/if}}
+                <div class="author-meta">
+                    {{#if location}}<span class="author-location icon-location">{{location}}</span>{{/if}}
+                    {{#if website}}<span class="author-link icon-link"><a href="{{website}}">{{website}}</a></span>{{/if}}
+                </div>
+            </section>
+
+        {{/author}}
+
+            <section class="share">
+                <h5>SHARE THIS POST</h5>
+                <a class="icon-social-twitter" href="https://twitter.com/intent/tweet?text={{encode title}}&amp;url={{url absolute="true"}}"
+                    onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
+                    <span class="hidden">Twitter</span>
+                </a>
+                <a class="icon-social-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
+                    onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
+                    <span class="hidden">Facebook</span>
+                </a>
+            </section>
+
+        </footer>
 
   </article>
 
