--- a/themes/uno/post.hbs
+++ b/themes/uno/post.hbs
@@ -34,23 +34,21 @@
                 {{#if bio}}
                     <p>{{bio}}</p>
                 {{/if}}
-                <div class="author-meta">
-                    {{#if location}}<span class="author-location icon-location">{{location}}</span>{{/if}}
-                    {{#if website}}<span class="author-link icon-link"><a href="{{website}}">{{website}}</a></span>{{/if}}
-                </div>
             </section>
 
         {{/author}}
 
             <section class="share">
                 <h5>SHARE THIS POST</h5>
-                <a class="icon-social-twitter" href="https://twitter.com/intent/tweet?text={{encode title}}&amp;url={{url absolute="true"}}"
+                <a href="https://twitter.com/intent/tweet?text={{encode title}}&amp;url={{url absolute="true"}}"
                     onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-                    <span class="hidden">Twitter</span>
+					<i class='icon icon-social-twitter'></i>
+					<span class="label">Twitter</span>
                 </a>
-                <a class="icon-social-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
+                <a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
                     onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-                    <span class="hidden">Facebook</span>
+					<i class='icon icon-social-facebook'></i>
+                    <span class="label">Facebook</span>
                 </a>
             </section>
 
