--- a/themes/uno/assets/css/uno.css
+++ b/themes/uno/assets/css/uno.css
@@ -1108,6 +1108,7 @@ pre {
 
 .footer {
   display: block;
+  margin: 2em 0 0 0;
   padding: 2em 0 0 0;
   border-top: 2px solid #DDDDDD;
   font-size: .7em;
@@ -1186,16 +1187,16 @@ hr {
 /* The author credit area after the post */
 .post-footer {
   position: relative;
-  margin: 6rem 0 0 0;
-  padding: 6rem 0 0 0;
+  margin: 4rem 0 0 0;
+  padding: 2rem 0 0 0;
   border-top: #EBF2F6 1px solid; }
 
 .post-footer h4 {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   margin: 0; }
 
 .post-footer h5 {
-  font-size: 0.8rem;
+  font-size: 0.65rem;
   color: #b3b3b3;
   margin: 0; }
 
@@ -1234,7 +1235,7 @@ hr {
    links remain at a fixed width the whole time */
 .post-footer .share {
   position: absolute;
-  top: 6rem;
+  top: 2rem;
   right: 0;
   width: 140px; }
 
@@ -1244,6 +1245,9 @@ hr {
   margin: 1rem 1.6rem 1.6rem 0;
   color: #BBC7CC;
   text-decoration: none; }
+
+.post-footer .share a .icon {
+  font-size: 1.8em; }
 
 .post-footer .share .icon-social-twitter:hover {
   color: #55acee; }
