--- a/themes/uno/post.hbs
+++ b/themes/uno/post.hbs
@@ -43,12 +43,12 @@
                 <a href="https://twitter.com/intent/tweet?text={{encode title}}&amp;url={{url absolute="true"}}"
                     onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
 					<i class='icon icon-social-twitter'></i>
-					<span class="label">Twitter</span>
+					<span class="hidden">Twitter</span>
                 </a>
                 <a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
                     onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
 					<i class='icon icon-social-facebook'></i>
-                    <span class="label">Facebook</span>
+                    <span class="hidden">Facebook</span>
                 </a>
             </section>
 
