add post footer

--- a/themes/uno/post.hbs
+++ b/themes/uno/post.hbs
@@ -35,9 +35,10 @@
                     <p>{{bio}}</p>
                 {{/if}}
 				
-				</br>
+				{{#post}}
                 <h5>Published on</h5>	
 				<time datetime="{{date format="MMMM DD, YYYY"}}" class="post-meta__date date">{{date format="MMMM DD, YYYY"}}</time>
+				{{/post}}
 				
             </section>
 
