adjust footer margin

--- a/themes/uno/assets/scss/sections/_post.scss
+++ b/themes/uno/assets/scss/sections/_post.scss
@@ -82,7 +82,7 @@
 /* The author credit area after the post */
 .post-footer {
     position: relative;
-    margin: 4rem 0 0 0;
+    margin: 4rem 0 1rem 0;
     padding: 2rem 0 0 0;
     border-top: #EBF2F6 1px solid;
 }
