--- a/themes/uno/assets/css/uno.css
+++ b/themes/uno/assets/css/uno.css
@@ -1108,7 +1108,6 @@ pre {
 
 .footer {
   display: block;
-  margin: 2em 0 0 0;
   padding: 2em 0 0 0;
   border-top: 2px solid #DDDDDD;
   font-size: .7em;
@@ -1187,7 +1186,7 @@ hr {
 /* The author credit area after the post */
 .post-footer {
   position: relative;
-  margin: 4rem 0 0 0;
+  margin: 4rem 0 1rem 0;
   padding: 2rem 0 0 0;
   border-top: #EBF2F6 1px solid; }
 
